// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClickHouse DDL Snapshots > All field types DDL output > should match snapshot for all types schema 1`] = `
"CREATE TABLE IF NOT EXISTS all_types
(
    string_field String,
    text_field String,
    int_field Int32,
    long_field Int64,
    bigint_field Int64,
    float_field Float32,
    double_field Float64,
    bool_field Bool,
    boolean_field Bool,
    uuid_field UUID,
    timestamp_field DateTime64(3),
    timestamptz_field DateTime64(3),
    date_field Date,
    time_field String,
    json_field JSON,
    binary_field String,
    decimal_field Decimal(38, 9),
    string_array Array(String),
    int_array Array(Int32),
    uuid_array Array(UUID)
)
ENGINE = MergeTree()
ORDER BY (uuid_field)"
`;

exports[`ClickHouse DDL Snapshots > All field types DDL output > should match snapshot for all types schema with options 1`] = `
"CREATE TABLE IF NOT EXISTS types_test.all_types
(
    string_field String,
    text_field String,
    int_field Int32,
    long_field Int64,
    bigint_field Int64,
    float_field Float32,
    double_field Float64,
    bool_field Bool,
    boolean_field Bool,
    uuid_field UUID,
    timestamp_field DateTime64(3),
    timestamptz_field DateTime64(3),
    date_field Date,
    time_field String,
    json_field JSON,
    binary_field String,
    decimal_field Decimal(38, 9),
    string_array Array(String),
    int_array Array(Int32),
    uuid_array Array(UUID)
)
ENGINE = MergeTree()
ORDER BY (uuid_field)"
`;

exports[`ClickHouse DDL Snapshots > ClickHouse-specific features DDL output > should match snapshot for schema with SETTINGS 1`] = `
"CREATE TABLE IF NOT EXISTS \`user\`
(
    id UUID,
    email String,
    name String,
    age Nullable(Int32)
)
ENGINE = MergeTree()
ORDER BY (id)
SETTINGS index_granularity = 8192, storage_policy = 'fast_ssd'"
`;

exports[`ClickHouse DDL Snapshots > ClickHouse-specific features DDL output > should match snapshot for schema with SummingMergeTree 1`] = `
"CREATE TABLE IF NOT EXISTS metrics
(
    id UUID,
    \`date\` Date,
    count Int32,
    total Float64
)
ENGINE = SummingMergeTree()
ORDER BY (id, \`date\`)"
`;

exports[`ClickHouse DDL Snapshots > ClickHouse-specific features DDL output > should match snapshot for schema with partition by date 1`] = `
"CREATE TABLE IF NOT EXISTS \`events\`
(
    id UUID,
    event_type String,
    created_at DateTime64(3),
    data JSON
)
ENGINE = MergeTree()
PARTITION BY toYYYYMM(created_at)
ORDER BY (created_at, id)"
`;

exports[`ClickHouse DDL Snapshots > Complex schema with relations DDL output > should match snapshot for complex schema 1`] = `
"CREATE TABLE IF NOT EXISTS post
(
    id UUID,
    title String,
    content String,
    author_id String,
    category_id Nullable(String),
    published_at Nullable(DateTime64(3)),
    view_count Int32,
    is_published Bool,
    metadata JSON,
    tags Array(String)
)
ENGINE = MergeTree()
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Complex schema with relations DDL output > should match snapshot for complex schema with all options 1`] = `
"CREATE TABLE IF NOT EXISTS blog.post
(
    id UUID,
    title String,
    content String,
    author_id String,
    category_id Nullable(String),
    published_at Nullable(DateTime64(3)),
    view_count Int32,
    is_published Bool,
    metadata JSON,
    tags Array(String)
)
ENGINE = ReplacingMergeTree()
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Edge case DDL output > should match snapshot for empty schema (minimal fields) 1`] = `
"CREATE TABLE IF NOT EXISTS empty_entity
(
    id UUID
)
ENGINE = MergeTree()
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Edge case DDL output > should match snapshot for schema with all modifiers 1`] = `
"CREATE TABLE IF NOT EXISTS modifiers
(
    required_field String,
    optional_field Nullable(String),
    unique_field String,
    required_unique String,
    array_field Array(String)
)
ENGINE = MergeTree()
ORDER BY (required_field)"
`;

exports[`ClickHouse DDL Snapshots > Edge case DDL output > should match snapshot for schema with reserved words 1`] = `
"CREATE TABLE IF NOT EXISTS reserved
(
    id UUID,
    \`select\` String,
    \`from\` String,
    \`where\` String,
    \`order\` String,
    \`group\` String
)
ENGINE = MergeTree()
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Edge case DDL output > should match snapshot for schema with special characters in name 1`] = `
"CREATE TABLE IF NOT EXISTS \`my-_special__entity\`
(
    id UUID,
    name String
)
ENGINE = MergeTree()
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Indexes and constraints DDL output > should match snapshot for indexed schema 1`] = `
"CREATE TABLE IF NOT EXISTS product
(
    id UUID,
    sku String,
    name String,
    price Decimal(38, 9),
    quantity Int32,
    is_active Bool,
    created_at DateTime64(3)
)
ENGINE = MergeTree()
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Indexes and constraints DDL output > should match snapshot for indexed schema with TTL 1`] = `
"CREATE TABLE IF NOT EXISTS product
(
    id UUID,
    sku String,
    name String,
    price Decimal(38, 9),
    quantity Int32,
    is_active Bool,
    created_at DateTime64(3)
)
ENGINE = MergeTree()
ORDER BY (id)
TTL created_at + INTERVAL 30 DAY"
`;

exports[`ClickHouse DDL Snapshots > Indexes and constraints DDL output > should match snapshot for indexed schema with partition 1`] = `
"CREATE TABLE IF NOT EXISTS product
(
    id UUID,
    sku String,
    name String,
    price Decimal(38, 9),
    quantity Int32,
    is_active Bool,
    created_at DateTime64(3)
)
ENGINE = MergeTree()
PARTITION BY toYYYYMM(created_at)
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema 1`] = `
"CREATE TABLE IF NOT EXISTS \`user\`
(
    id UUID,
    email String,
    name String,
    age Nullable(Int32)
)
ENGINE = MergeTree()
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with IF NOT EXISTS 1`] = `
"CREATE TABLE IF NOT EXISTS \`user\`
(
    id UUID,
    email String,
    name String,
    age Nullable(Int32)
)
ENGINE = MergeTree()
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with ReplacingMergeTree 1`] = `
"CREATE TABLE IF NOT EXISTS \`user\`
(
    id UUID,
    email String,
    name String,
    age Nullable(Int32)
)
ENGINE = ReplacingMergeTree()
ORDER BY (id)"
`;

exports[`ClickHouse DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with custom ORDER BY 1`] = `
"CREATE TABLE IF NOT EXISTS \`user\`
(
    id UUID,
    email String,
    name String,
    age Nullable(Int32)
)
ENGINE = MergeTree()
ORDER BY (id, email)"
`;

exports[`ClickHouse DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with database name 1`] = `
"CREATE TABLE IF NOT EXISTS analytics.\`user\`
(
    id UUID,
    email String,
    name String,
    age Nullable(Int32)
)
ENGINE = MergeTree()
ORDER BY (id)"
`;
